# MIPT_Programming_project

./: Available_Buildings.cpp  Available_Buildings.h  Building_List.cpp  Building_List.h  CMakeLists.txt  Cell.cpp  Cell.h  Map.cpp  Map.h  README.md  Texture_List.cpp  Texture_List.h  building.cpp  building.h  main.cpp
Sound/: goida_hRZ6vDr.wavZone.Identifier
Source/: Available_Buildings.cpp  Building_List.cpp  Building_List.h  Cell.cpp  Cell.h  Health.cpp  Health.h  Map.cpp  Map.h  Miner.cpp  Miner.h  UI_Textures.cpp  UI_Textures.h  barrak.cpp  barrak.h  bot.cpp  bot.h  building.cpp  building.h  main.cpp  unit.cpp  unit.h
Source_for_SFML3.1.0/: Available_Buildings.cpp  Available_Buildings.h  Building_List.cpp  Building_List.h  Cell.cpp  Cell.h  Health.cpp  Health.h  Map.cpp  Map.h  Mine.cpp  Mine.h  Miner.cpp  Miner.h  Texture_List.cpp  Texture_List.h  UI_Textures.cpp  UI_Textures.h  barrak.h  bot.cpp  bot.h  building.cpp  building.h  button.h  main.cpp  sfml_app  unit.cpp  unit.h
